recursion.lessons.recursion.koch.Koch.scala.error
Koch:23: error: Unit does not take parameters
		Motif()}
                     ^